--- a/index.html
+++ b/index.html
@@ -2,11 +2,103 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+  	<header>
+  		<nav>
+  			<ul>
+  				<li><a href="#">Информация</a></li>
+  				<li><a href="#">Фото и Видео</a></li>
+  				<li><a href="#">Карта штата</a></li>
+  				<li><a href="catalog.html">Гостиницы</a></li>
+  			</ul>
+  			<a>
+  				<img src="https://via.placeholder.com/138x70" alt="Логотип Седона" width="138" height="70"> <!-- Не уверен, верно ли размечать логотип таким образом. Но, думаю, разделять nav на 2 нельзя и лого потом можно будет расположить стилями -->
+  			</a>
+  		</nav>
+  	</header>
+  	<main>
+  		<h1>Туристический город Седона</h1> <!-- Не покидает мысль, что фоновая картинка с пейзажем все таки контентная)) -->
+  		<img src="https://via.placeholder.com/465x350" alt="Добро пожаловать в великолепную Седону" width="465" height="350">
+  		<p>Седона - небольшой городок в Аризоне, заслуживающий Большего!</p>
+  		<p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+  		<h2>5 преимуществ Седоны</h2>
+  		<section><!-- Секция захватывает список ниже, из-за одного смыслового контекста - Преимущество №1 -->
+  			<div> <!-- Для отдельной окраски блока в дальнейшем -->
+  				<h2>Настоящий<br>городок</h2>
+	  			<p>-№1-</p>
+	  			<p>Седона - не аттракциона для туристов, там течет своя жизнь</p>
+	  			<img src="https://via.placeholder.com/800x256" alt="Жизнь в Седоне" width="800" height="256">
+	  		</div>
+  			<ul>
+  				<li>
+  					<h3>Жильё</h3>
+  					<p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+  				</li>
+  				<li>
+  					<h3>Еда</h3>
+  					<p>Всегда заказывайте фирменный бургер, Вы не разочаруетесь!</p>
+  				</li>
+  				<li>
+  					<h3>Сувениры</h3>
+  					<p>Не только китайского, но и местного производства!</p>
+  				</li>
+  			</ul>
+  		</section>
+  		<section><!--Здесь div не использую, так как хочу далее покрасить фон всего блока, а картинку наложить сверху -->
+  			<img src="https://via.placeholder.com/800x256" alt="Мост Дьявола" width="800" height="256">
+  			<h2>Там есть<br>Мост Дьявола</h2>
+  			<p>-№2-</p>
+  			<p>Да, по нему можно пройти! Если конечно Вы осмелитесь</p>
+  		</section>
+  		<section><!-- Не уверен в разметке преимуществ в отдельные section, логика простая - одно преимущество - один section. Можно было бы завернуть всё в один section со списком, но кажется это не верным логически -->
+  			<h2>Небольшая<br>площадь</h2>
+  					<p>-№3-</p>
+  					<p>Все достопримечательности находятся очень близко</p>
+  		</section>
+  		<section>
+  			<h2>Красивая<br>дорога</h2>
+  					<p>-№4-</p>
+  					<p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+  		</section>
+  		<section>
+  			<h2>Мало<br>туристов</h2>
+  					<p>-№5-</p>
+  					<p>Большинство едет в Гранд Каньон и толпится там</p>
+  		</section>
+  		<section>
+  			<h2>Поиск гостиниц</h2>
+  			<p>Заинтересовались?</p>
+  			<p>Укажите предполагаемые даты поездки, и мы покажем Вам лучшие предложения гостиниц в Седоне</p>
+  			<button  type="button">Поиск гостиниц в Седоне</button> <!--До сих пор не очень понял, отличия тега button от input type button, делаю как в демо барбершопа-->
+  			<!-- Здесь будет карта-->
+  		</section>
+  	</main>
+  	<footer>
+  		<h2>Контакты</h2>
+  		<p>#VISITSEDONA<br>ТЕЛ:<a href="tel:+79656660166">+7(965) 666-01-66</a></p>
+  		<h2>Соц. сети</h2>
+  		<ul>
+  			<li> <!-- Так же не уверен в уместности тег figure в этом списке, разместил его, так как в макете иконки соц сетей отрисованы отдельно от квадратов -->
+  				<a href="#">
+  					<div><img src="https://via.placeholder.com/17x17" alt="twitter" width="17" height="17"></div>
+  				</a>
+  			</li>
+  			<li>
+  				<a href="#">
+  					<div><img src="https://via.placeholder.com/12x22" alt="facebook" width="12" height="22"></div>
+  				</a>
+  			</li>
+  			<li>
+  				<a href="#">
+  					<div><img src="https://via.placeholder.com/20x16" alt="youtube" width="20" height="16"></div>
+  				</a>
+  			</li>
+  		</ul>
+  		<h2>Copyright</h2>
+  		<p>WEBSITE BY</p>
+  		<img src="https://via.placeholder.com/115x41" alt="HTMLAcademy" width="115" height="41">
+  	</footer>
   </body>
 </html>
