--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   		</nav>
   	</header>
   	<main>
-  		<h1 class="visually-hidden">Туристический город Седона</h1> <!-- Не покидает мысль, что фоновая картинка с пейзажем все таки контентная)) -->
+  		<h1 class="visually-hidden">Туристический город Седона</h1>
+      <img src="https://via.placeholder.com/1200x509" alt="Пейзаж Седоны" width="1200" height="509">
   		<img src="https://via.placeholder.com/187x44" alt="Добро пожаловать в великолепную Седону" width="187" height="44">
       <img src="https://via.placeholder.com/255x28" alt="" width="255" height="28"><!-- В этой и ниже картинках оставил альты пустыми, и весь смысл прописал в первом, чтобы на скринридерах не читалась одна фраза по частям -->
       <img src="https://via.placeholder.com/456x213" alt="" width="456" height="213">
