--- a/catalog.html
+++ b/catalog.html
@@ -63,14 +63,8 @@
 		      		<li><a href="#">По рейтингу</a></li>
       			</ul>
       		</div>
-          <form action="#"><!-- Не понимаю как действуют такие элементы, обернул в форму, чтобы сделать кнопки кликабельными, т.к. когда добавлял внутрь кнопки ссылку ругался валидатор -->
-            <button type="submit" name="Вперед">
-              <img src="https://via.placeholder.com/11x10" alt="Впред" width="11" height="10">
-            </button>
-        	  <button type="submit" name="Назад">
-              <img src="https://via.placeholder.com/11x10" alt="Назад" width="11" height="10">
-            </button>
-          </form>
+      		<a href="#"><img src="https://via.placeholder.com/11x10" alt="Выше" width="11" height="10"></a>
+        	<a href="#"><img src="https://via.placeholder.com/11x10" alt="Ниже" width="11" height="10"></a>
       </div>
       <article>
       		<img src="https://via.placeholder.com/135x90" alt="Гостиница Amara Resort & Spa" width="135" height="90">
