--- a/catalog.html
+++ b/catalog.html
@@ -10,10 +10,7 @@
   			<ul>
   				<li><a href="#">Информация</a></li>
   				<li><a href="#">Фото и Видео</a></li>
-  				<li><a href="index.html">
-  					<img src="https://via.placeholder.com/138x70" alt="Логотип Седона" width="138" height="70"> 
-  					</a>
-  				</li>
+  				<li><a href="index.html"></a></li>
   				<li><a href="#">Карта штата</a></li>
   				<li><a href="">Гостиницы</a></li>
   			</ul>
@@ -65,8 +62,10 @@
       		</div>
       		<a href="#"><img src="https://via.placeholder.com/11x10" alt="Выше" width="11" height="10"></a>
         	<a href="#"><img src="https://via.placeholder.com/11x10" alt="Ниже" width="11" height="10"></a>
-      </div>
-      <article>
+        </div>
+      </section>
+      <section>
+        <article>
       		<img src="https://via.placeholder.com/135x90" alt="Гостиница Amara Resort & Spa" width="135" height="90">
       		<h3>Amara Resort & Spa</h3>
       		<p>Гостиница</p>
@@ -82,8 +81,10 @@
 	      	</ul>
       		<p>Рейтинг: 8,5</p>
         </article>
+      </section>
+      <section>
         <article>
-      	<img src="https://via.placeholder.com/135x90" alt="Гостиница Desert Quail Inn" width="135" height="90">
+          <img src="https://via.placeholder.com/135x90" alt="Гостиница Desert Quail Inn" width="135" height="90">
       		<h3>Desert Quail Inn</h3>
       		<p>Мотель</p>
       		<p>От 3000 Р.</p>
@@ -96,6 +97,8 @@
       		</ul>
       		<p>Рейтинг: 8,9</p>
         </article>
+      </section>
+      <section>
       	<article>
       	<img src="https://via.placeholder.com/135x90" alt="Гостиница Villas at Poco Diablo" width="135" height="90">
       		<h3>Villas at Poco Diablo</h3>
