--- a/index.html
+++ b/index.html
@@ -10,12 +10,9 @@
   			<ul>
           <li><a href="#">Информация</a></li>
           <li><a href="#">Фото и Видео</a></li>
-          <li><a href="index.html">
-            <img src="https://via.placeholder.com/138x70" alt="Логотип Седона" width="138" height="70"> 
-            </a>
-          </li>
+          <li><a href=""></a><!-- убрал логотип, размечал изначально по аналогии с барбершопом, но теперь понял, что там он контентный, потому что логотип - название, а здесь декоративный --></li>
           <li><a href="#">Карта штата</a></li>
-          <li><a href="">Гостиницы</a></li>
+          <li><a href="catalog.html">Гостиницы</a></li>
         </ul>
   		</nav>
   	</header>
