--- a/catalog.html
+++ b/catalog.html
@@ -2,6 +2,10 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="logo.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="logo.png">
+    <link rel="manifest" href="manifest.webmanifest">
     <title>Седона</title>
   </head>
   <body>
@@ -60,13 +64,13 @@
 		      		<li><a href="#">По рейтингу</a></li>
       			</ul>
       		</div>
-      		<a href="#"><img src="https://via.placeholder.com/11x10" alt="Выше" width="11" height="10"></a>
-        	<a href="#"><img src="https://via.placeholder.com/11x10" alt="Ниже" width="11" height="10"></a>
+      		<a href=""><img src="img/arrow_up.svg" alt="Выше" width="11" height="10"></a>
+        	<a href="#"><img src="img/arrow_down.svg" alt="Ниже" width="11" height="10"></a>
         </div>
       </section>
       <section>
         <article>
-      		<img src="https://via.placeholder.com/135x90" alt="Гостиница Amara Resort & Spa" width="135" height="90">
+      		<img src="img/amara_resort_spa.jpg" alt="Гостиница Amara Resort & Spa" width="135" height="90">
       		<h3>Amara Resort & Spa</h3>
       		<p>Гостиница</p>
       		<p>От 4000 Р.</p>
@@ -84,7 +88,7 @@
       </section>
       <section>
         <article>
-          <img src="https://via.placeholder.com/135x90" alt="Гостиница Desert Quail Inn" width="135" height="90">
+          <img src="img/desert_quail_inn.jpg" alt="Гостиница Desert Quail Inn" width="135" height="90">
       		<h3>Desert Quail Inn</h3>
       		<p>Мотель</p>
       		<p>От 3000 Р.</p>
@@ -100,7 +104,7 @@
       </section>
       <section>
       	<article>
-      	<img src="https://via.placeholder.com/135x90" alt="Гостиница Villas at Poco Diablo" width="135" height="90">
+      	<img src="img/villas_at_poco_diablo.jpg" alt="Гостиница Villas at Poco Diablo" width="135" height="90">
       		<h3>Villas at Poco Diablo</h3>
       		<p>Апартаменты</p>
       		<p>От 2000 Р.</p>
@@ -134,7 +138,9 @@
       </ul>
       <h2 class="visually-hidden">Copyright</h2>
       <p>WEBSITE BY</p>
-      <img src="https://via.placeholder.com/115x41" alt="HTMLAcademy" width="115" height="41">
+      <a href="htmlacademy.ru">
+        <img src="img/htmlacademy_logo.svg" alt="HTMLAcademy" width="115" height="41">
+      </a>
     </footer>
   </body>
 </html>
