--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="logo.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="logo.png">
+    <link rel="manifest" href="manifest.webmanifest">
     <title>Седона</title>
   </head>
   <body>
@@ -18,10 +22,10 @@
   	</header>
   	<main>
   		<h1 class="visually-hidden">Туристический город Седона</h1>
-      <img src="https://via.placeholder.com/1200x509" alt="Пейзаж Седоны" width="1200" height="509">
-  		<img src="https://via.placeholder.com/187x44" alt="Добро пожаловать в великолепную Седону" width="187" height="44">
-      <img src="https://via.placeholder.com/255x28" alt="" width="255" height="28"><!-- В этой и ниже картинках оставил альты пустыми, и весь смысл прописал в первом, чтобы на скринридерах не читалась одна фраза по частям -->
-      <img src="https://via.placeholder.com/456x213" alt="" width="456" height="213">
+      <img src="img/bg_sedona_landscape.jpg" alt="Пейзаж Седоны" width="1200" height="509">
+  		<img src="img/welcome.svg" alt="Добро пожаловать в великолепную Седону" width="187" height="44">
+      <img src="img/gorgeous.svg" alt="" width="255" height="28">
+      <img src="img/sedona.svg" alt="" width="456" height="213">
   		<p>Седона - небольшой городок в Аризоне, заслуживающий Большего!</p>
   		<p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
   		<h2 class="visually-hidden">5 преимуществ Седоны</h2>
@@ -30,7 +34,7 @@
   				<h2>Настоящий<br>городок</h2>
 	  			<p>-№1-</p>
 	  			<p>Седона - не аттракциона для туристов, там течет своя жизнь</p>
-	  			<img src="https://via.placeholder.com/800x256" alt="Жизнь в Седоне" width="800" height="256">
+	  			<img src="img/sedona_life.jpg" alt="Жизнь в Седоне" width="800" height="256">
 	  		</div>
   			<ul>
   				<li>
@@ -49,7 +53,7 @@
   		</section>
   		<section>
   			<div><!-- Так же как и с div'ом выше -->
-          <img src="https://via.placeholder.com/800x256" alt="Мост Дьявола" width="800" height="256">
+          <img src="img/devils_bridge.jpg" alt="Мост Дьявола" width="800" height="256">
     			<h2>Там есть<br>Мост Дьявола</h2>
     			<p>-№2-</p>
     			<p>Да, по нему можно пройти! Если конечно Вы осмелитесь</p>
@@ -101,7 +105,9 @@
       </ul>
       <h2 class="visually-hidden">Copyright</h2>
       <p>WEBSITE BY</p>
-      <img src="https://via.placeholder.com/115x41" alt="HTMLAcademy" width="115" height="41">
+      <a href="htmlacademy.ru">
+      	<img src="img/htmlacademy_logo.svg" alt="HTMLAcademy" width="115" height="41">
+      </a>
     </footer>
   </body>
 </html>
