--- a/catalog.html
+++ b/catalog.html
@@ -64,8 +64,8 @@
 		      		<li><a href="#">По рейтингу</a></li>
       			</ul>
       		</div>
-      		<a href=""><img src="img/arrow_up.svg" alt="Выше" width="11" height="10"></a>
-        	<a href="#"><img src="img/arrow_down.svg" alt="Ниже" width="11" height="10"></a>
+      		<a href=""><img src="img/arrow_up.svg" alt="Сортировать по возрастанию" width="11" height="10"></a>
+        	<a href="#"><img src="img/arrow_down.svg" alt="Сортировать по убыванию" width="11" height="10"></a>
         </div>
       </section>
       <section>
@@ -139,7 +139,7 @@
       <h2 class="visually-hidden">Copyright</h2>
       <p>WEBSITE BY</p>
       <a href="htmlacademy.ru">
-        <img src="img/htmlacademy_logo.svg" alt="HTMLAcademy" width="115" height="41">
+        <img src="img/htmlacademy_logo.svg" alt="Логотип HTMLAcademy" width="115" height="41">
       </a>
     </footer>
   </body>
