--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   	<main>
   		<h1 class="visually-hidden">Туристический город Седона</h1>
       <img src="img/bg_sedona_landscape.jpg" alt="Пейзаж Седоны" width="1200" height="509">
-  		<img src="img/welcome.svg" alt="Добро пожаловать в великолепную Седону" width="187" height="44">
-      <img src="img/gorgeous.svg" alt="" width="255" height="28">
-      <img src="img/sedona.svg" alt="" width="456" height="213">
+  		<img src="img/welcome.svg" alt="Добро пожаловать" width="187" height="44">
+      <img src="img/gorgeous.svg" alt="в великолепную" width="255" height="28">
+      <img src="img/sedona.svg" alt="Седону" width="456" height="213">
   		<p>Седона - небольшой городок в Аризоне, заслуживающий Большего!</p>
   		<p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
   		<h2 class="visually-hidden">5 преимуществ Седоны</h2>
@@ -106,7 +106,7 @@
       <h2 class="visually-hidden">Copyright</h2>
       <p>WEBSITE BY</p>
       <a href="htmlacademy.ru">
-      	<img src="img/htmlacademy_logo.svg" alt="HTMLAcademy" width="115" height="41">
+      	<img src="img/htmlacademy_logo.svg" alt="Логотип HTMLAcademy" width="115" height="41">
       </a>
     </footer>
   </body>
