--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
   			<button class="button-brown button-big subtitle text-tall text-white" type="button">Поиск гостиниц в Седоне</button>
   		</section>
   	</main>
-  	<footer class="main-footer text-tall subtitle">
+  	<footer class="main-footer text-tall subtitle text-bold">
       <h2 class="visually-hidden">Контакты</h2>
-      <p>#VISITSEDONA<br>ТЕЛ:<a href="tel:+79656660166">+7(965) 666-01-66</a></p>
+      <p>#VISITSEDONA<br>ТЕЛ:<a class="link" href="tel:+79656660166">+7(965) 666-01-66</a></p>
       <h2 class="visually-hidden">Соц. сети</h2>
       <ul class="list-unmarked">
         <li>
@@ -112,7 +112,7 @@
       <h2 class="visually-hidden">Copyright</h2>
       <p>WEBSITE BY</p>
       <a href="htmlacademy.ru">
-      	<img src="img/htmlacademy_logo.svg" alt="Логотип HTMLAcademy" width="115" height="41">
+      	<img src="img/htmlacademy_logo.svg" alt="Логотип HTMLAcademy" width="115" height="41"> <!-- здесь пока тоже не понял, как сделать состояния -->
       </a>
     </footer>
   </body>
